--- a/settings.json
+++ b/settings.json
@@ -1,11 +1,10 @@
 {
     "auto_start": false,
     "auto_connect": false,
-    "minimize_to_tray": false,
+    "minimize_to_tray": true,
     "show_speed": true,
     "auto_ip_change": false,
     "ip_change_interval": 1,
     "show_ip_notification": true,
-    "exit_country": "",
-    "enable_kill_switch": false
+    "exit_country": ""
 }
